# polymarket-near-end-bot

./: GITHUB_ANALYSIS_REPORT.md  QUICK_START.md  README.md  SCHEDULER_README.md  advanced_scheduler.py  auto_trader_scheduler.py  config.example.env  main.py  pyproject.toml  run_auto_trader.sh  scheduler_config.json  scheduler_stats.json  start_scheduler.py  test_scheduler.py
src/: auto_trader.py  balance_checker.py  manual_trader.py  polymarket_scanner.py  polymarket_tokenid.py  polymarket_trader.py
